fix contrast on images

--- a/src/sass/components/_ToolsMobile.scss
+++ b/src/sass/components/_ToolsMobile.scss
@@ -28,5 +28,9 @@
 @media (max-width: 768px) {
   .toolsM-container {
     display: block;
+    .toolM img{
+      filter: contrast(1.2);
+    }
   }
+
 }
